[metadata]
name = Hive_ML
author = Bendazzoli Simone
author_email = simben@kth.se
url = https://github.com/MAIA-KTH/Hive_ML.git
description = Python package to run Machine Learning Experiments, within the Hive Framework.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
license = GPLv3
license_files =
    LICENSE
project_urls =
    Documentation=https://hive-ml.readthedocs.io
    Bug Tracker=https://github.com/MAIA-KTH/Hive_ML/issues
    Source Code=https://github.com/MAIA-KTH/Hive_ML
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Typing :: Typed

[options]
python_requires = >= 3.11
# for compiling and develop setup only
# no need to specify the versions so that we could
# compile for multiple targeted versions.
install_requires =
    numpy==1.23.5
    SimpleITK==2.2.1
    six==1.16.0
    hive-maia==1.1.2rc2
    pandas==1.5.3
    pyradiomics==3.0.1
    tqdm==4.64.1
    mlflow==2.5.0
    pysftp==0.2.9
    mlxtend==0.22.0
    scikit-learn==1.2.1
    scipy==1.10.0
    plotly==5.9.0
    yellowbrick==1.5
    kaleido==0.2.1

[flake8]
select = B,C,E,F,N,P,T4,W,B9
max_line_length = 120
ignore =
    E203
    E501
    E741
    W503
    W504
    C408
    N812
    B023
    B905
    B028
    B907
    B908
per_file_ignores = __init__.py: F401, __main__.py: F401
exclude = *.pyi,.git,.eggs,Hive_ML/_version.py,versioneer.py,venv,.venv,_version.py

[isort]
known_first_party = Hive_ML
profile = black
line_length = 120
skip = .git, .eggs, venv, .venv, versioneer.py, _version.py, conf.py, Hive_ML/__init__.py
skip_glob = *.pyi
add_imports = from __future__ import annotations
append_only = true

[versioneer]
VCS = git
style = pep440
versionfile_source = Hive_ML/_version.py
versionfile_build = Hive_ML/_version.py
tag_prefix =v
parentdir_prefix = Hive_ML-

[mypy]
# Suppresses error messages about imports that cannot be resolved.
ignore_missing_imports = True
# Changes the treatment of arguments with a default value of None by not implicitly making their type Optional.
no_implicit_optional = True
# Warns about casting an expression to its inferred type.
warn_redundant_casts = True
# No error on unneeded # type: ignore comments.
warn_unused_ignores = False
# Shows a warning when returning a value with type Any from a function declared with a non-Any return type.
warn_return_any = True
# Prohibit equality checks, identity checks, and container checks between non-overlapping types.
strict_equality = True
# Shows column numbers in error messages.
show_column_numbers = True
# Shows error codes in error messages.
show_error_codes = True
# Use visually nicer output in error messages: use soft word wrap, show source code snippets, and show error location markers.
pretty = False
# Warns about per-module sections in the config file that do not match any files processed when invoking mypy.
warn_unused_configs = True
# Make arguments prepended via Concatenate be truly positional-only.
strict_concatenate = True
# Allows variables to be redefined with an arbitrary type,
# as long as the redefinition is in the same block and nesting level as the original definition.
# allow_redefinition = True

exclude = venv/

[mypy-versioneer]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-Hive_ML._version]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-Hive_ML.eggs]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-Hive_ML.*]
# Also check the body of functions with no types in their type signature.
check_untyped_defs = True
# Warns about usage of untyped decorators.
disallow_untyped_decorators = True

[mypy-Hive_ML.data_loader.*,Hive_ML.evaluation.*,Hive_ML.extraction.*,Hive_ML.feature_generation.*,Hive_ML.training.*,Hive_ML.utilities.*]
disallow_incomplete_defs = True

[coverage:run]
concurrency = multiprocessing
source = .
data_file = .coverage/.coverage
omit = setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    # Don't complain if tests don't hit code:
    raise NotImplementedError
    if __name__ == .__main__.:
show_missing = True
skip_covered = True

[coverage:xml]
output = coverage.xml